# bilibili-comment-analyzer

./: .gitignore  README.md  config.py  pyproject.toml  run.py  version.py
.github/workflows/: build-and-release.yml
api/: __init__.py  bilibili_api.py  crypto.py
assets/: map_template.html  stopwords.txt  wordcloud_template.html
gui/: __init__.py  about_frame.py  app.py  browse_frame.py  qrcode_login.py  settings_frame.py  tooltip.py  up_frame.py  video_frame.py
models/: __init__.py  comment.py  video.py
scripts/: build_exe_poetry.bat
store/: __init__.py  csv_analyzer.py  csv_exporter.py  geo_exporter.py  image_downloader.py  wordcloud_exporter.py
utils/: __init__.py  assets_helper.py
